--- a/app/src/main/res/layout-sw600dp-land/fragment_details.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_details.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/fragment_details_padding"
+    android:background="@color/white"
     tools:context=".ui.details.DetailsFragment">
 
     <TextView
@@ -61,7 +62,7 @@
 
             <TextView
                 android:id="@+id/fragment_detail_media_title_tv"
-                style="@style/detailTitle"
+                style="@style/textTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -83,7 +84,7 @@
 
             <TextView
                 android:id="@+id/fragment_detail_description_title_tv"
-                style="@style/detailTitle"
+                style="@style/textTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
@@ -104,7 +105,7 @@
 
             <ImageView
                 android:id="@+id/fragment_detail_point_of_interest_iv"
-                style="@style/detailIcon"
+                style="@style/iIcon"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginEnd="10dp"
@@ -116,7 +117,7 @@
 
             <TextView
                 android:id="@+id/fragment_detail_point_of_interest_title_tv"
-                style="@style/detailSubtitle"
+                style="@style/textlSubtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
@@ -152,7 +153,7 @@
 
                     <ImageView
                         android:id="@+id/fragment_detail_surface_iv"
-                        style="@style/detailIcon"
+                        style="@style/iIcon"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_marginEnd="10dp"
@@ -163,7 +164,7 @@
 
                     <TextView
                         android:id="@+id/fragment_detail_surface_title_tv"
-                        style="@style/detailSubtitle"
+                        style="@style/textlSubtitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
@@ -185,23 +186,23 @@
 
                     <ImageView
                         android:id="@+id/fragment_detail_rooms_iv"
-                        style="@style/detailIcon"
+                        style="@style/iIcon"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_marginEnd="10dp"
                         android:layout_marginTop="18dp"
-                        android:contentDescription="@string/number_of_rooms"
+                        android:contentDescription="@string/rooms_amount"
                         android:src="@drawable/ic_home"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/fragment_detail_surface_iv" />
 
                     <TextView
                         android:id="@+id/fragment_detail_rooms_title_tv"
-                        style="@style/detailSubtitle"
+                        style="@style/textlSubtitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
-                        android:text="@string/number_of_rooms"
+                        android:text="@string/rooms_amount"
                         app:layout_constraintBottom_toBottomOf="@+id/fragment_detail_rooms_iv"
                         app:layout_constraintStart_toEndOf="@+id/fragment_detail_rooms_iv"
                         app:layout_constraintTop_toTopOf="@+id/fragment_detail_rooms_iv" />
@@ -219,23 +220,23 @@
 
                     <ImageView
                         android:id="@+id/fragment_detail_bathrooms_iv"
-                        style="@style/detailIcon"
+                        style="@style/iIcon"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_marginEnd="10dp"
                         android:layout_marginTop="18dp"
-                        android:contentDescription="@string/number_of_bathrooms"
+                        android:contentDescription="@string/bathrooms_amount"
                         android:src="@drawable/ic_bathroom"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/fragment_detail_rooms_iv" />
 
                     <TextView
                         android:id="@+id/fragment_detail_bathrooms_title_tv"
-                        style="@style/detailSubtitle"
+                        style="@style/textlSubtitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
-                        android:text="@string/number_of_bathrooms"
+                        android:text="@string/bathrooms_amount"
                         app:layout_constraintBottom_toBottomOf="@+id/fragment_detail_bathrooms_iv"
                         app:layout_constraintStart_toEndOf="@+id/fragment_detail_bathrooms_iv"
                         app:layout_constraintTop_toTopOf="@+id/fragment_detail_bathrooms_iv" />
@@ -253,23 +254,23 @@
 
                     <ImageView
                         android:id="@+id/fragment_detail_bedrooms_iv"
-                        style="@style/detailIcon"
+                        style="@style/iIcon"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_marginEnd="10dp"
                         android:layout_marginTop="18dp"
-                        android:contentDescription="@string/number_of_bedrooms"
+                        android:contentDescription="@string/bedrooms_amount"
                         android:src="@drawable/ic_bedroom"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/fragment_detail_bathrooms_iv" />
 
                     <TextView
                         android:id="@+id/fragment_detail_bedrooms_title_tv"
-                        style="@style/detailSubtitle"
+                        style="@style/textlSubtitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
-                        android:text="@string/number_of_bedrooms"
+                        android:text="@string/bedrooms_amount"
                         app:layout_constraintBottom_toBottomOf="@+id/fragment_detail_bedrooms_iv"
                         app:layout_constraintStart_toEndOf="@+id/fragment_detail_bedrooms_iv"
                         app:layout_constraintTop_toTopOf="@+id/fragment_detail_bedrooms_iv" />
@@ -288,7 +289,7 @@
 
                     <ImageView
                         android:id="@+id/fragment_detail_date_iv"
-                        style="@style/detailIcon"
+                        style="@style/iIcon"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_marginEnd="10dp"
@@ -300,7 +301,7 @@
 
                     <TextView
                         android:id="@+id/fragment_detail_post_date_title_tv"
-                        style="@style/detailSubtitle"
+                        style="@style/textlSubtitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
@@ -322,7 +323,7 @@
 
                     <TextView
                         android:id="@+id/fragment_detail_sold_date_title_tv"
-                        style="@style/detailSubtitle"
+                        style="@style/textlSubtitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -344,7 +345,7 @@
 
                     <ImageView
                         android:id="@+id/fragment_detail_agent_iv"
-                        style="@style/detailIcon"
+                        style="@style/iIcon"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_marginEnd="10dp"
@@ -356,7 +357,7 @@
 
                     <TextView
                         android:id="@+id/fragment_detail_agent_title_tv"
-                        style="@style/detailSubtitle"
+                        style="@style/textlSubtitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
@@ -400,7 +401,7 @@
 
                     <ImageView
                         android:id="@+id/fragment_detail_location_iv"
-                        style="@style/detailIcon"
+                        style="@style/iIcon"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:contentDescription="@string/location"
@@ -410,7 +411,7 @@
 
                     <TextView
                         android:id="@+id/fragment_detail_location_title_tv"
-                        style="@style/detailSubtitle"
+                        style="@style/textlSubtitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
