--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,17 +28,17 @@
         <item name="titleTextColor">@color/white</item>
     </style>
 
-    <style name="detailTitle">
-        <item name="android:textSize">18sp</item>
+    <style name="textTitle">
+        <item name="android:textSize">@dimen/title_text_size</item>
         <item name="fontFamily">@font/roboto_bold</item>
     </style>
 
-    <style name="detailSubtitle">
-        <item name="android:textSize">15sp</item>
+    <style name="textlSubtitle">
+        <item name="android:textSize">@dimen/subtitle_text_size</item>
         <item name="fontFamily">@font/roboto_bold</item>
     </style>
 
-    <style name="detailIcon">
+    <style name="iIcon">
         <item name="tint">@color/grey</item>
     </style>
 
