--- a/app/src/main/res/layout-land/activity_add_property.xml
+++ b/app/src/main/res/layout-land/activity_add_property.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".ui.add.AddPropertyActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -36,7 +37,7 @@
 
             <ImageView
                 android:id="@+id/activity_add_property_type_iv"
-                style="@style/detailIcon"
+                style="@style/iIcon"
                 android:layout_width="@dimen/default_icon_size"
                 android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/property_type"
@@ -68,7 +69,7 @@
 
             <ImageView
                 android:id="@+id/activity_add_property_price_iv"
-                style="@style/detailIcon"
+                style="@style/iIcon"
                 android:layout_width="@dimen/default_icon_size"
                 android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/price"
@@ -132,7 +133,7 @@
 
             <ImageView
                 android:id="@+id/activity_add_property_surface_iv"
-                style="@style/detailIcon"
+                style="@style/iIcon"
                 android:layout_width="@dimen/default_icon_size"
                 android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/surface"
@@ -165,10 +166,10 @@
 
             <ImageView
                 android:id="@+id/activity_add_property_rooms_iv"
-                style="@style/detailIcon"
+                style="@style/iIcon"
                 android:layout_width="@dimen/default_icon_size"
                 android:layout_height="@dimen/default_icon_size"
-                android:contentDescription="@string/number_of_rooms"
+                android:contentDescription="@string/rooms_amount"
                 android:src="@drawable/ic_home"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_add_property_rooms_et"
                 app:layout_constraintStart_toStartOf="parent"
@@ -182,8 +183,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/default_margin"
                 android:layout_marginTop="@dimen/default_margin"
-                android:autofillHints="@string/number_of_rooms"
-                android:hint="@string/number_of_rooms"
+                android:autofillHints="@string/rooms_amount"
+                android:hint="@string/rooms_amount"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/activity_add_property_rooms_iv"
                 app:layout_constraintTop_toBottomOf="@+id/activity_add_property_surface_et">
@@ -197,10 +198,10 @@
 
             <ImageView
                 android:id="@+id/activity_add_property_bathrooms_iv"
-                style="@style/detailIcon"
+                style="@style/iIcon"
                 android:layout_width="@dimen/default_icon_size"
                 android:layout_height="@dimen/default_icon_size"
-                android:contentDescription="@string/number_of_bathrooms"
+                android:contentDescription="@string/bathrooms_amount"
                 android:src="@drawable/ic_bathroom"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_add_property_bathrooms_et"
                 app:layout_constraintStart_toStartOf="parent"
@@ -214,8 +215,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/default_margin"
                 android:layout_marginTop="@dimen/default_margin"
-                android:autofillHints="@string/number_of_bathrooms"
-                android:hint="@string/number_of_bathrooms"
+                android:autofillHints="@string/bathrooms_amount"
+                android:hint="@string/bathrooms_amount"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/activity_add_property_bathrooms_iv"
                 app:layout_constraintTop_toBottomOf="@+id/activity_add_property_rooms_et">
@@ -229,10 +230,10 @@
 
             <ImageView
                 android:id="@+id/activity_add_property_bedrooms_iv"
-                style="@style/detailIcon"
+                style="@style/iIcon"
                 android:layout_width="@dimen/default_icon_size"
                 android:layout_height="@dimen/default_icon_size"
-                android:contentDescription="@string/number_of_bathrooms"
+                android:contentDescription="@string/bathrooms_amount"
                 android:src="@drawable/ic_bedroom"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_add_property_bedrooms_et"
                 app:layout_constraintStart_toStartOf="parent"
@@ -246,8 +247,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/default_margin"
                 android:layout_marginTop="@dimen/default_margin"
-                android:autofillHints="@string/number_of_bedrooms"
-                android:hint="@string/number_of_bedrooms"
+                android:autofillHints="@string/bedrooms_amount"
+                android:hint="@string/bedrooms_amount"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/activity_add_property_bedrooms_iv"
                 app:layout_constraintTop_toBottomOf="@+id/activity_add_property_bathrooms_et">
@@ -261,7 +262,7 @@
 
             <ImageView
                 android:id="@+id/activity_add_property_description_iv"
-                style="@style/detailIcon"
+                style="@style/iIcon"
                 android:layout_width="@dimen/default_icon_size"
                 android:layout_height="@dimen/default_icon_size"
                 android:layout_marginTop="@dimen/default_margin"
@@ -278,7 +279,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/default_margin"
                 android:layout_marginTop="@dimen/default_margin"
-                android:autofillHints="@string/number_of_bedrooms"
+                android:autofillHints="@string/bedrooms_amount"
                 android:fontFamily="@font/roboto"
                 android:gravity="bottom"
                 android:hint="@string/description"
@@ -296,10 +297,10 @@
 
             <ImageView
                 android:id="@+id/activity_add_property_address_iv"
-                style="@style/detailIcon"
+                style="@style/iIcon"
                 android:layout_width="@dimen/default_icon_size"
                 android:layout_height="@dimen/default_icon_size"
-                android:contentDescription="@string/number_of_bathrooms"
+                android:contentDescription="@string/bathrooms_amount"
                 android:src="@drawable/ic_pin"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_add_property_address_line1_et"
                 app:layout_constraintStart_toStartOf="parent"
@@ -412,7 +413,7 @@
 
             <ImageView
                 android:id="@+id/activity_add_property_point_of_interest_iv"
-                style="@style/detailIcon"
+                style="@style/iIcon"
                 android:layout_width="@dimen/default_icon_size"
                 android:layout_height="@dimen/default_icon_size"
                 android:layout_marginTop="@dimen/default_margin"
@@ -444,7 +445,7 @@
 
             <ImageView
                 android:id="@+id/activity_add_property_agent_iv"
-                style="@style/detailIcon"
+                style="@style/iIcon"
                 android:layout_width="@dimen/default_icon_size"
                 android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/real_estate_agent"
@@ -476,7 +477,7 @@
 
             <ImageView
                 android:id="@+id/activity_add_property_sold_date_iv"
-                style="@style/detailIcon"
+                style="@style/iIcon"
                 android:layout_width="@dimen/default_icon_size"
                 android:layout_height="@dimen/default_icon_size"
                 android:contentDescription="@string/real_estate_agent"
